--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="container">
-                <canvas id="systemCanvas"></canvas>
+                <canvas id="configurationCanvas"></canvas>
                 <canvas id="colorbarCanvas"></canvas>
                 <canvas id="graphCanvas"></canvas>
             </div>
