--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#about.html">About</a></li>
+                <li><a href="#original_ofc_model.html">Original OFC Model</a></li>
+                <li><a href="#single_defect_model.html">Single Defect Model</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
