--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>test</title>
+        <title>ofc models</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/png" href="favicon.png">
     </head>
     <body>
         <header>
-            <h1>Page Title</h1>
+            <h1>OFC Models</h1>
         </header>
         <main>
-            <h2>Main</h2>
             <!-- RadioButton
             <div class="settings-panel">
                 <label>
