--- a/index.html
+++ b/index.html
@@ -2,56 +2,26 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Game of Life - Rust + WebAssembly</title>
+    <title>Game of Life</title>
     <style>
         body {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #1a1a1a;
-            color: white;
-            font-family: Arial, sans-serif;
         }
-        canvas {
-            border: 1px solid #333;
-            margin: 20px;
-        }
-        .controls {
-            margin: 20px;
-        }
-        button {
-            padding: 10px 20px;
-            margin: 0 10px;
-            font-size: 16px;
-            cursor: pointer;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-        }
-        button:hover {
-            background-color: #45a049;
+        #game-of-life-canvas {
+            border: 1px solid #000;
         }
     </style>
 </head>
 <body>
-    <h1>Game of Life</h1>
-    <div id="game-container"></div>
-    <div class="controls">
-        <button id="play-pause">Play/Pause</button>
-        <button id="reset">Reset</button>
-    </div>
-    <script type="module">
-        import init from './pkg/game_of_life.js';
-
-        async function run() {
-            await init();
-        }
-
-        run();
-    </script>
+    <canvas id="game-of-life-canvas"></canvas>
+    <script src="./index.js"></script>
 </body>
 </html>
