--- a/index.html
+++ b/index.html
@@ -2,26 +2,42 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Game of Life</title>
+    <title>Game of Life - WASM</title>
     <style>
-        body {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-        #game-of-life-canvas {
-            border: 1px solid #000;
+        canvas {
+            border: 1px solid black;
         }
     </style>
 </head>
 <body>
-    <canvas id="game-of-life-canvas"></canvas>
-    <script src="./index.js"></script>
+    <canvas id="game-of-life-canvas" width="640" height="360"></canvas>
+    <br>
+    <button id="reset-button">Reset</button>
+    <script type="module">
+        import init, { Gol } from './pkg/game_of_life.js';
+
+        async function run() {
+            await init();
+
+            const canvas = document.getElementById('game-of-life-canvas');
+            const ctx = canvas.getContext('2d');
+            
+            const gol = new Gol(canvas.width, canvas.height);
+
+            function render() {
+                gol.generate();
+                gol.display(ctx);
+                requestAnimationFrame(render);
+            }
+
+            document.getElementById('reset-button').addEventListener('click', () => {
+                gol.init();
+            });
+
+            render();
+        }
+
+        run();
+    </script>
 </body>
 </html>
