--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game of Life</title>
+    <title>Page Title</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Conway's Game of Life</h1>
-        <div class="controls">
-            <button id="play-pause">Play</button>
-            <button id="reset">Reset</button>
-            <div class="speed-control">
-                <label for="speed">Speed:</label>
-                <input type="range" id="speed" min="1" max="10" value="5">
-            </div>
-        </div>
-        <canvas id="game-of-life-canvas"></canvas>
-    </div>
-    <script src="./index.js"></script>
+    <header>
+        <h1>Page Title</h1>
+    </header>
+    <nav class="sidebar">
+        <ul>
+            <li><a href="tab1.html">Tab1</a></li>
+            <li><a href="tab2.html">Tab2</a></li>
+            <li><a href="tab3.html">Tab3</a></li>
+            <li><a href="tab4.html">Tab4</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
