--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Title</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -18,5 +18,8 @@
             <li><a href="tab4.html">Tab4</a></li>
         </ul>
     </nav>
+    <main>
+        <p>Hello World</p>
+    </main>
 </body>
 </html>
