--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
         </ul>
     </nav>
     <main>
-        <p>Hello World</p>
+        <div class="game-container">
+            <canvas id="game-canvas"></canvas>
+            <div class="controls">
+                <button id="start-btn">Start</button>
+                <button id="stop-btn">Stop</button>
+                <button id="reset-btn">Reset</button>
+            </div>
+        </div>
     </main>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
