--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <button id="reset-btn">Reset</button>
             </div>
         </div>
+        <div id="line-chart"></div>
     </main>
     <script type="module" src="index.js"></script>
 </body>
