--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Title</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -26,7 +26,7 @@
                 <button id="stop-btn" disabled>Stop</button>
                 <button id="reset-btn">Reset</button>
             </div>
-            <canvas id="line-canvas"></canvas>
+            <canvas id="graph-canvas"></canvas>
         </div>
     </main>
     <script src="index.js" type="module"></script>
